--- a/sic/templates/moderation/overview.html
+++ b/sic/templates/moderation/overview.html
@@ -39,7 +39,7 @@
     </div>
     <div>
         <h2>Removed posts</h2>
-        <p class="help-text">To edit a story's status, append <code>/moderate/</code> to its url to visit the appropriate editing page.</p>
+        <p class="help-text">To edit a {% model_verbose_name 'story' False %}'s status, append <code>/moderate/</code> to its url to visit the appropriate editing page.</p>
         <table>
             <thead>
                 <tr>
