--- a/sic/templates/account/account.html
+++ b/sic/templates/account/account.html
@@ -104,7 +104,7 @@
                             <td>{{ user.show_avatars|yesno }}</td>
                         </tr>
                         <tr>
-                            <th>show stories with content warning</th>
+                            <th>show {% model_verbose_name 'story' True %} with content warning</th>
                             <td>{{ user.show_stories_with_content_warning|yesno }}</td>
                         </tr>
                     </tbody>
@@ -177,7 +177,7 @@
     </div>
     <hr />
     <div class="taggregations" id="taggregations">
-        <h2>Aggregations</h2>
+        <h2>{% model_verbose_name 'taggregation' True True %}</h2>
         <nav>
             <ul>
                 <li><a href="{% url 'new_aggregation' %}">create</a></li>
@@ -191,7 +191,7 @@
                         {% for c in user.created_taggregations.all %}
                             <li><a href="{{c.get_absolute_url }}">{{ c.name }}</a></li>
                         {% empty %}
-                            <li>You have created no Aggregations.</li>
+                            <li>You have created no {% model_verbose_name 'taggregation' True %}.</li>
                         {% endfor %}
                     </ul>
                 </div>
@@ -203,7 +203,7 @@
                         {% for c in user.moderated_taggregations.all %}
                             <li><a href="{{c.get_absolute_url }}">{{ c.name }}</a></li>
                         {% empty %}
-                            <li>You moderate no Aggregations.</li>
+                            <li>You moderate no {% model_verbose_name 'taggregation' True %}.</li>
                         {% endfor %}
                     </ul>
                 </div>
@@ -214,7 +214,7 @@
                     {% for c in user.taggregation_subscriptions.all %}
                         <li><a href="{{c.get_absolute_url }}">{{ c.name }}</a></li>
                     {% empty %}
-                        <li>You have no Aggregation subscriptions. Browse public Aggregations or create your own.</li>
+                        <li>You have no {% model_verbose_name 'taggregation' False %} subscriptions. Browse public {% model_verbose_name 'taggregation' True %} or create your own.</li>
                     {% endfor %}
                 </ul>
             </div>
@@ -233,11 +233,11 @@
                 <ul>
                     <li>
                         RSS
-                        <a href="{% if user.username %}{% url 'user_feeds_rss' user.username %}{% else %}{% url 'user_feeds_rss' user.pk %}{% endif %}?token={{ user.auth_token|urlencode }}" title="Latest Stories RSS" class="feed"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-rss-fill" viewBox="0 0 16 16"> <path d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2zm1.5 2.5c5.523 0 10 4.477 10 10a1 1 0 1 1-2 0 8 8 0 0 0-8-8 1 1 0 0 1 0-2zm0 4a6 6 0 0 1 6 6 1 1 0 1 1-2 0 4 4 0 0 0-4-4 1 1 0 0 1 0-2zm.5 7a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"/> </svg></a>
+                        <a href="{% if user.username %}{% url 'user_feeds_rss' user.username %}{% else %}{% url 'user_feeds_rss' user.pk %}{% endif %}?token={{ user.auth_token|urlencode }}" title="Latest {% model_verbose_name 'story' True %} RSS" class="feed"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-rss-fill" viewBox="0 0 16 16"> <path d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2zm1.5 2.5c5.523 0 10 4.477 10 10a1 1 0 1 1-2 0 8 8 0 0 0-8-8 1 1 0 0 1 0-2zm0 4a6 6 0 0 1 6 6 1 1 0 1 1-2 0 4 4 0 0 0-4-4 1 1 0 0 1 0-2zm.5 7a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"/> </svg></a>
                     </li>
                     <li>
                         Atom
-                        <a href="{% if user.username %}{% url 'user_feeds_atom' user.username %}{% else %}{% url 'user_feeds_atom' user.pk %}{% endif %}?token={{ user.auth_token|urlencode }}" title="Latest Stories Atom" class="feed"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-rss" viewBox="0 0 16 16"><path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/><path d="M5.5 12a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm-3-8.5a1 1 0 0 1 1-1c5.523 0 10 4.477 10 10a1 1 0 1 1-2 0 8 8 0 0 0-8-8 1 1 0 0 1-1-1zm0 4a1 1 0 0 1 1-1 6 6 0 0 1 6 6 1 1 0 1 1-2 0 4 4 0 0 0-4-4 1 1 0 0 1-1-1z"/></svg></a>
+                        <a href="{% if user.username %}{% url 'user_feeds_atom' user.username %}{% else %}{% url 'user_feeds_atom' user.pk %}{% endif %}?token={{ user.auth_token|urlencode }}" title="Latest {% model_verbose_name 'story' True %} Atom" class="feed"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-rss" viewBox="0 0 16 16"><path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/><path d="M5.5 12a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm-3-8.5a1 1 0 0 1 1-1c5.523 0 10 4.477 10 10a1 1 0 1 1-2 0 8 8 0 0 0-8-8 1 1 0 0 1-1-1zm0 4a1 1 0 0 1 1-1 6 6 0 0 1 6 6 1 1 0 1 1-2 0 4 4 0 0 0-4-4 1 1 0 0 1-1-1z"/></svg></a>
                     </li>
                 </ul>
             </nav>
