--- a/sic/templates/base.html
+++ b/sic/templates/base.html
@@ -88,8 +88,8 @@
                 }
             </style>
         {% endif %}
-        <link rel="alternate" type="application/rss+xml" href="{% url 'latest_stories_rss' %}" title="Latest Stories RSS">
-        <link rel="alternate" type="application/atom+xml" href="{% url 'latest_stories_atom' %}" title="Latest Stories Atom">
+        <link rel="alternate" type="application/rss+xml" href="{% url 'latest_stories_rss' %}" title="Latest {% model_verbose_name 'story' True %} RSS">
+        <link rel="alternate" type="application/atom+xml" href="{% url 'latest_stories_atom' %}" title="Latest {% model_verbose_name 'story' True %} Atom">
         <link rel="manifest" href="/static/manifest.webmanifest">
         <title>{% block title %}{{ config.verbose_name }}{% endblock %}</title>
         {% block style %}{% endblock %}
@@ -102,9 +102,9 @@
                 </div>
                 <nav class="main menu">
                     <ul>
-                        <li><a href="{% url 'all_stories' %}" id="all_stories_link">All stories</a></li>
-                        <li><a href="{% url 'recent_comments' %}" id="recent_comments_link">Comments</a></li>
-                        <li><a href="{% url 'personal_aggregations' %}" id="aggregations_link">Aggregations</a></li>
+                        <li><a href="{% url 'all_stories' %}" id="all_stories_link">All {% model_verbose_name 'story' True True%}</a></li>
+                        <li><a href="{% url 'recent_comments' %}" id="recent_comments_link">{% model_verbose_name 'comment' True True%}</a></li>
+                        <li><a href="{% url 'personal_aggregations' %}" id="aggregations_link">{% model_verbose_name 'taggregation' True True%}</a></li>
                         <li><a href="{% url 'browse_tags' %}" id="browse_tags_link">Tags</a></li>
                         <li><a href="{% url 'search' %}" id="search_link">Search</a></li>
                         {% if request.user.is_authenticated and request.user.can_participate %}
@@ -217,11 +217,11 @@
                             <a rel="me" href="https://botsin.space/@sic" title="Latest stories on Mastodon" class="feed"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#4D98DA" viewBox="0 0 1536 1792"><path d="M1503.302 1111.386c-22.579 116.159-202.224 243.284-408.55 267.921-107.588 12.837-213.519 24.636-326.476 19.455-184.728-8.463-330.494-44.092-330.494-44.092 0 17.983 1.11 35.106 3.328 51.12 24.015 182.308 180.772 193.228 329.261 198.32 149.872 5.127 283.321-36.951 283.321-36.951l6.157 135.491s-104.827 56.293-291.574 66.646c-102.974 5.66-230.836-2.59-379.759-42.009C65.529 1641.797 10.219 1297.502 1.482 948.17-1.11 844.449.485 746.646.49 664.847.5 307.631 234.539 202.924 234.539 202.924c118.011-54.199 320.512-76.99 531.033-78.71h5.173c210.52 1.721 413.152 24.511 531.157 78.71 0 0 234.04 104.706 234.04 461.923 0 0 2.935 263.556-32.64 446.539zm-243.429-418.827c0-88.4-21.711-159.35-67.71-210.618-46.63-51.972-107.687-78.613-183.47-78.613-87.699 0-154.104 33.703-198.002 101.121L768 576l-42.683-71.55c-43.907-67.42-110.313-101.124-198.003-101.124-75.792 0-136.849 26.642-183.47 78.614-45.21 51.973-67.718 122.219-67.718 210.618v432.53h171.359V705.273c0-88.498 37.234-133.415 111.713-133.415 82.35 0 123.63 53.283 123.63 158.646v229.788h170.35V730.505c0-105.363 41.272-158.646 123.62-158.646 74.478 0 111.715 44.917 111.715 133.415v419.816h171.358V692.56z"/></svg></a></li>
                         <li>
                             RSS
-                            <a href="{% url 'latest_stories_rss' %}" title="Latest Stories RSS" class="feed"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-rss-fill" viewBox="0 0 16 16"> <path d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2zm1.5 2.5c5.523 0 10 4.477 10 10a1 1 0 1 1-2 0 8 8 0 0 0-8-8 1 1 0 0 1 0-2zm0 4a6 6 0 0 1 6 6 1 1 0 1 1-2 0 4 4 0 0 0-4-4 1 1 0 0 1 0-2zm.5 7a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"/> </svg></a>
+                            <a href="{% url 'latest_stories_rss' %}" title="Latest {% model_verbose_name 'story' True %} RSS" class="feed"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-rss-fill" viewBox="0 0 16 16"> <path d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2zm1.5 2.5c5.523 0 10 4.477 10 10a1 1 0 1 1-2 0 8 8 0 0 0-8-8 1 1 0 0 1 0-2zm0 4a6 6 0 0 1 6 6 1 1 0 1 1-2 0 4 4 0 0 0-4-4 1 1 0 0 1 0-2zm.5 7a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"/> </svg></a>
                         </li>
                         <li>
                             Atom
-                            <a href="{% url 'latest_stories_atom' %}" title="Latest Stories Atom" class="feed"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-rss" viewBox="0 0 16 16"><path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/><path d="M5.5 12a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm-3-8.5a1 1 0 0 1 1-1c5.523 0 10 4.477 10 10a1 1 0 1 1-2 0 8 8 0 0 0-8-8 1 1 0 0 1-1-1zm0 4a1 1 0 0 1 1-1 6 6 0 0 1 6 6 1 1 0 1 1-2 0 4 4 0 0 0-4-4 1 1 0 0 1-1-1z"/></svg></a>
+                            <a href="{% url 'latest_stories_atom' %}" title="Latest {% model_verbose_name 'story' True %} Atom" class="feed"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-rss" viewBox="0 0 16 16"><path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/><path d="M5.5 12a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm-3-8.5a1 1 0 0 1 1-1c5.523 0 10 4.477 10 10a1 1 0 1 1-2 0 8 8 0 0 0-8-8 1 1 0 0 1-1-1zm0 4a1 1 0 0 1 1-1 6 6 0 0 1 6 6 1 1 0 1 1-2 0 4 4 0 0 0-4-4 1 1 0 0 1-1-1z"/></svg></a>
                         </li>
                     </ul>
                 </nav>
